<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/beige">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/innerConstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="7dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:background="@color/white"
                    android:backgroundTint="@color/cardview_dark_background"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/movie_poster_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="7dp"
                        android:scaleType="center"
                        android:src="@mipmap/ic_launcher" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/movie_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/movie_title_label"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title_label" />

                <TextView
                    android:id="@+id/movie_release_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_release_date_label"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />

                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_release_date"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_release_date_label" />

                <TextView
                    android:id="@+id/movie_vote_average_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_vote_average_label"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_release_date" />

                <TextView
                    android:id="@+id/movie_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/movie_vote_average"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_vote_average_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/movie_synopsis_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/movie_synopsis_label"
                android:typeface="serif"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                app:layout_constraintTop_toBottomOf="@+id/innerConstraint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/movie_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:text="@string/movie_synopsis"
                android:typeface="serif"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintTop_toBottomOf="@+id/movie_synopsis_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>